fix wrong z-indexes

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-between;
 
-  z-index: 999999;
+  z-index: 999;
   position: fixed;
   top: 0;
 
@@ -225,7 +225,7 @@
     }
 
     & .menu-items {
-      z-index: 1000;
+      z-index: 998;
       position: fixed;
       box-sizing: border-box;
       font-size: 1.1em;
