--- a/src/css/sections/landing.css
+++ b/src/css/sections/landing.css
@@ -78,9 +78,10 @@ section.landing {
     & .chat-phone {
       border: 10px solid #000;
       border-radius: 54px;
-      align-items: center;
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
       width: 360px;
       max-width: 95vw;
       height: 680px;
@@ -89,11 +90,17 @@ section.landing {
       z-index: 1;
       margin-left: 20px;
 
+      background-color: #c03ca9;
+
       & .iframe-notch {
         width: 60%;
         position: absolute;
         z-index: 2;
         top: -3px;
+      }
+
+      & .connected-img {
+        padding: 1rem;
       }
 
       & iframe {
